readded testing page link on doashboard

--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -30,6 +30,9 @@
         <ion-icon name="notifications-outline"></ion-icon> Notifications
         <ion-badge *ngIf="!onNotification && !noNotifs"  color ='danger'>{{this.unOpened}}</ion-badge> 
       </ion-tab-button>
+      <ion-tab-button (click)="navigateToTab('testing')">
+        <ion-icon name="bug-outline"></ion-icon> Testing
+      </ion-tab-button>
     </ion-tab-bar> 
     <div slot="top">
       <connection-status [mqttStatus]="mqttService.mqttStatus.value"></connection-status>
