--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -7,7 +7,8 @@
   </ion-toolbar> 
 </ion-header>
 <!--Navigation from one tab to other tab-->
-<ion-content *ngIf="loaded" padding>
+<!-- *ngIf="loaded" -->
+<ion-content padding>
   <ion-tabs>
  
     <ion-tab-bar color="primary" slot="top"> 
